--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "app-switcher",
     "instant-app-switcher",
     "application-switcher",
-    "instant-application-switcher",
     "hotkeys",
     "macos",
     "productivity",
@@ -24,15 +23,14 @@
   ],
   "commands": [
     {
-      "name": "select-application", 
+      "name": "select-application",
       "title": "Select Application",
       "description": "Switch between applications quickly with hotkeys and smart search",
       "mode": "view"
     }
   ],
   "categories": [
-    "Productivity",
-    "System"
+    "Other"
   ],
   "dependencies": {
     "@raycast/api": "^1.102.6",
@@ -40,11 +38,18 @@
   },
   "devDependencies": {
     "@types/node": "^24.3.1",
+    "@typescript-eslint/eslint-plugin": "^8.45.0",
+    "@typescript-eslint/parser": "^8.45.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "prettier": "^3.6.2",
     "typescript": "^5.9.2"
   },
   "scripts": {
     "build": "ray build -e dist",
     "dev": "ray develop",
-    "lint": "ray lint"
+    "lint": "ray lint",
+    "publish": "npx @raycast/api@latest publish"
   }
 }
